added 3 charts: light, temp and humidity

--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -2,6 +2,16 @@
   background-color: #5bc0de;
 }
 
+/* .container-fluid{
+  width: 400;
+  height: 200;
+} */
+
+/* #myChart{
+  width: 200;
+  height: 100;
+} */
+
 /* .container{
   background-color: 	#808080;
 } */
