--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -8,7 +8,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="data">Data</a></li>
         <li><a href="chart">Chart</a></li>
-
+        <li><a href="historical">Light History</a></li>
       </ul>
     </div>
   </nav>
